--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,10 @@
 }
 
 
+.marl10{
+  margin-left: 10px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
